--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,14 @@
 
 // Custom
 @import 'custom';
+
+
+.body-cover {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+}
